<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frontpagelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Front_page"
    android:background="@drawable/bg"
    >#

    <Button
        android:id="@+id/bsq"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_custom"
        android:layout_marginTop="39dp"
        android:text="@string/sq" />

    <Button
        android:id="@+id/bdq"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="164dp"
        android:background="@drawable/button_custom"
        android:text="@string/dq"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bso"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="173dp"
        android:background="@drawable/button_custom"
        android:text="@string/seeother"
        android:textSize="20sp" />

    <Button
        android:id="@+id/brate"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_custom"
        android:layout_marginBottom="41dp"
        android:text="@string/rate" />
</RelativeLayout>