<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/questions_linear"
    android:weightSum="100">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:id="@+id/qno"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#2c24b4">

        <TextView
            android:id="@+id/curr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sqno" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tqno"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:id="@+id/body"
        android:orientation="vertical">

        <TextView
            android:id="@+id/que"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/sque" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/ans"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:text="@string/sclick" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/control"
        android:orientation="horizontal"
        android:layout_weight="12"
        android:gravity="center|center_horizontal"
        android:background="#2c24b4"
        >

        <Button
            android:id="@+id/bleft"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/leftarrow"
            />

        <Button
            android:id="@+id/bans"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/a" />

        <Button
            android:id="@+id/bright"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/rightarrow" />
    </LinearLayout>


</LinearLayout>
